fix(sup-14594): addressed the matter with information button overlapping with the dual-screen on medium size players

--- a/modules/KalturaSupport/components/dualScreen/dualScreenControlBar.css
+++ b/modules/KalturaSupport/components/dualScreen/dualScreenControlBar.css
@@ -161,7 +161,8 @@
     }
     .controlBar {
         top: 0 !important;
-        padding: 14px 14px 0 0;
+        padding: 0px 14px 0 0;
+        margin: 15px 0 0 0;
     }
     .controlBarBtn{
         font-size:26px;
